<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/ic_public_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_filters"
            android:icon="@mipmap/ic_view_list_black_24dp"
            android:title="@string/myFilters" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@mipmap/ic_grade_black_24dp"
            android:title="@string/favorite" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Invite friends" />
        </menu>
    </item>

</menu>
