<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/query_et"
            android:hint="@string/enter_the_query"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:background="@color/primary"
            android:singleLine="true"
            android:textSize="30dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <EditText

            android:id="@+id/source_et"
            android:hint="@string/enter_the_source"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="@color/primary"
            android:textSize="30dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/sort_by"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25dp"
                android:layout_weight="3"
                android:background="@color/colorDarkBackground"/>
            <Spinner
                android:id="@+id/sort_spnr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBackground">
            </Spinner>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <Button
            android:id="@+id/date_from_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/chose_date_from"
            android:background="@color/accent"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/date_from_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/date_to_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/chose_date_to"
            android:background="@color/accent"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/date_to_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/apply_filters"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/apply_filtres"
            android:textSize="20dp"
            android:background="@color/primary_light"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>